<resources>
    <string name="app_name">VocabPractice</string>
    <string name="test_button">Start a test</string>
    <string name="add_button">Add words</string>
    <string name="view_button">View words</string>
    <string name="group_add">Add new group</string>
    <string name="group_add_button">Add group</string>
    <string name="group_add_edit">Name of group</string>
    <string name="article_edit">Article (der, die, das, …)</string>
    <string name="base_edit">Word (Auto, Baum, …) </string>
    <string name="plural_edit">Plural (-s, -äe, …)</string>
    <string name="next_button">Next word</string>
    <string name="done_button">Done</string>
    <string name="translation_edit">Translation(auto, strom, …)</string>
    <string name="test_intro">Customize your test:</string>
    <string name="test_group">Select a group…</string>
    <string name="test_num_questions">Number of questions</string>
    <string name="start_test">Start test</string>
    <string name="test_base_edit">Base</string>
    <string name="test_article_edit">Article</string>
    <string name="test_plural_edit">Plural</string>
    <string name="test_finish">Get results</string>
    <string name="test_result">Test Results</string>
    <string name="mistakes">Your mistakes:</string>
    <string name="view_tests">View tests</string>
    <string name="check_word">Check word</string>
    <string name="test_mistakes">Test from mistakes</string>
</resources>
