<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/testIntroText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/test_button"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:text="@string/test_intro"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/groupChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/test_group"
        android:gravity="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/numQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:ems="10"
        android:hint="@string/test_num_questions"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/testMistakes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/test_mistakes"
        android:textSize="24sp" />

    <Button
        android:id="@+id/startTestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/start_test"
        android:textSize="24sp" />
</LinearLayout>