<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/group_add_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_add"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_margin="14dp"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/group_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="14dp"
        android:hint="@string/group_add_edit"
        android:inputType="none" />

    <Button
        android:id="@+id/group_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/group_add_button" />
</LinearLayout>