<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/questionNumberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/wordToTranslateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="10dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/testArticleEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/article_edit"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/testBaseEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/base_edit"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/testPluralEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/plural_edit"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/testNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_word"
        android:layout_marginBottom="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/inputWordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/rightWordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="17sp"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/pointsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="17sp" />
</LinearLayout>